<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Cuer Dbg</string>
    <string name="bottomnav_title_browse">Browse</string>
    <string name="bottomnav_title_playlists">Playlists</string>
    <string name="bottomnav_title_playlist">Playlist</string>
    <string name="bottomnav_title_player">Player</string>
    <string name="bottomnav_title_remotes">Remotes</string>
    <string name="nav_playlist_item_edit_title">View Item</string>
    <string name="sharenav_title_scan">Scaning …</string>
    <string name="sharenav_title_playlist">New Playlist</string>
    <string name="sharenav_playlist_iten">New playlist item</string>
    <string name="sharenav_title_playlist_edit">Playlist settings</string>
    <string name="sharenav_title_main">Main</string>
    <string name="menu_play">Play</string>
    <string name="menu_play_yt">Launch</string>
    <string name="menu_channel_yt">Go to channel</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">UnStar</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_sendto">Send to …</string>
    <string name="menu_paste">Paste &amp; add</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_playlist_mode_shuffle">Shuffle</string>
    <string name="menu_playlist_mode_loop">Loop</string>
    <string name="menu_playlist_mode_single">Single</string>
    <string name="menu_show_unlistened">Show unlistened</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_merge">Merge with &#8230;</string>
    <string name="menu_support">Support</string>
    <string name="menu_like">Like</string>
    <string name="menu_comment">Comment</string>
    <string name="menu_pip">Floating</string>
    <string name="menu_full">Fullscreen</string>
    <string name="menu_search">Search</string>
    <string name="menu_playlist_add">Create playlist</string>
    <string name="menu_sort_alpha">Alphabetical</string>
    <string name="menu_sort_category">Categories</string>
    <string name="menu_launch">Launch</string>
    <string name="menu_list">List</string>
    <string name="menu_card">Cards</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_unpin">Unpin</string>
    <string name="share_button_add_return">Add Return</string>
    <string name="share_button_reject">Reject</string>
    <string name="share_button_play_now">Play Now</string>
    <string name="share_button_add_to_queue">Add to queue</string>
    <string name="share_button_add_playlist">Add playlist</string>
    <string name="share_button_play_locally">Play locally</string>
    <string name="share_button_play_return">Play / Return</string>
    <string name="share_button_goto_item">Go to item</string>
    <string name="share_button_return">Return</string>
    <string name="share_button_goto_app">Go to app</string>
    <string name="share_error_no_link">Could not find a link to process</string>
    <string name="share_error_already_exists">%1$s already exists …</string>
    <string name="share_error_no_default_playlist">No default playlist - select a playlist to save the item</string>
    <string name="pie_empty_desc">We can only add youtube video links at the moment</string>
    <string name="playlist_dialog_title">Select Playlist</string>
    <string name="pie_add_playlist_dialog_title">Create Playlist</string>
    <string name="pie_empty_title">Sorry &#8230; ❤</string>
    <string name="pie_watched">Watched</string>
    <string name="pie_play_start">Always play from start</string>
    <string name="pie_unpin_playlist">Unpin playlist?</string>
    <string name="playlist_fab_up_contentdesc">Up</string>
    <string name="playlist_fab_down_contentdesc">Down</string>
    <string name="playlist_fab_refresh_contentdesc">Refresh</string>
    <string name="pl_item_delete">Delete</string>
    <string name="pl_item_move">Move</string>
    <string name="playlist_change_dialog_title">Change playlist?</string>
    <string name="playlist_change_dialog_message">This will change the current playlist …</string>
    <string name="playlist_error_please_add">Please add the item to a playlist first …</string>
    <string name="playlist_error_upcoming">"This is not live yet …</string>
    <string name="playlist_item_menu_view">View</string>
    <string name="playlist_item_menu_play">Play</string>
    <string name="playlist_item_menu_play_start">Play from start</string>
    <string name="playlist_item_menu_play_yt">Launch</string>
    <string name="playlist_item_menu_channel_yt">Go to channel</string>
    <string name="playlist_item_menu_star">Star</string>
    <string name="playlist_item_menu_share">Share</string>
    <string name="playlist_item_menu_related">Related</string>
    <string name="playlist_item_menu_goto_playlist">Goto playlist</string>
    <string name="playlist_msg_deleted">This playlist was deleted</string>
    <string name="playlist_play_items_from_start">Play items from start</string>
    <string name="playlist_error_moveitem_already_exists">Item already exists on this playlist …</string>
    <string name="playlist_item_moved_undo_message">Moved to %1$s</string>
    <string name="playlist_items_updated">%1$s new items</string>
    <string name="playlist_error_updating">Error updating: %1$s …</string>
    <string name="pe_fragment_title">Edit playlist</string>
    <string name="pe_fragment_title_add">Create playlist</string>
    <string name="pe_title">Title</string>
    <string name="pe_create">Create</string>
    <string name="pe_save">Save</string>
    <string name="pe_play_from_start">Play from start</string>
    <string name="pe_parent">Parent</string>
    <string name="pe_mark_all_watched">Mark all watched</string>
    <string name="pe_mark_all_unwatched">Mark all unwatched</string>
    <string name="pe_info">Information</string>
    <string name="pe_playable">Playable</string>
    <string name="pe_deletable">Deletable</string>
    <string name="pe_editable_items">Editable items</string>
    <string name="pe_deletable_items">Deletable items</string>
    <string name="pe_other_actions">Other actions</string>
    <string name="pe_click_image_to_change">Click image to change</string>
    <string name="title_activity_fullscreen">Video Player</string>
    <string name="cd_overflow">More actions</string>
    <string name="cd_check">Select item</string>
    <string name="prefs_root_backup_item_title">Backup/Restore</string>
    <string name="prefs_root_backup_cat_title">Backup/Restore</string>
    <string name="prefs_root_backup_summary">Data backup options</string>
    <string name="prefs_root_debug_cat_title">Debug</string>
    <string name="prefs_root_debug_send_reports_summary">Trigger unsent crash report to crashlytics</string>
    <string name="prefs_root_debug_send_reports_title">Send unsent reports</string>
    <string name="prefs_root_remote_service_not_running">Not running</string>
    <string name="prefs_root_remote_service_running">Running</string>
    <string name="prefs_root_remote_service_title">Remote service</string>
    <string name="prefs_root_player_cat_title">Player section</string>
    <string name="prefs_root_player_summary">Player settings</string>
    <string name="prefs_root_player_title">Player</string>
    <string name="prefs_root_onboard_summary">Reset intro state (to show)</string>
    <string name="prefs_root_onboard_title">Onboarding</string>
    <string name="prefs_backup_manual_cat_title">Manual backup</string>
    <string name="pref_backup_backup_summary">Back up data to a ZIP file</string>
    <string name="pref_backup_backup_title">Backup database</string>
    <string name="pref_backup_restore_summary">Restore the DB from a ZIP/JSON file</string>
    <string name="pref_backup_restore_title">Restore database</string>
    <string name="prefs_backup_auto_cat_title">Auto backup</string>
    <string name="pref_backup_clear_auto_summary">Clear auto backup settings and choose another location</string>
    <string name="pref_backup_clear_auto_title">Clear settings</string>
    <string name="pref_backup_summary_auto_title">Auto backup info</string>
    <string name="pref_backup_set_auto_summary">Choose an existing backup file from storage to sync with - use something
        like drive or dropbox so that it is backed up off device.
    </string>
    <string name="pref_backup_set_auto_title">Choose existing auto backup file</string>
    <string name="pref_backup_restore_auto_title">Restore data?</string>
    <string name="pref_backup_restore_auto_message">Do you want to restore the data from this auto backup file (existing
        data will be lost)
    </string>
    <string name="pref_backup_restore_auto_confirm">Clear and Restore</string>
    <string name="pref_backup_error_title">Backup error</string>
    <string name="prefs_player_auto_float_summary">When the in-app player is playing and is minimised then launch the
        floating player
    </string>
    <string name="prefs_player_auto_float_title">Auto float player</string>
    <string name="prefs_player_restart_after_unlock_summary">When the in-app player is playing and is paused with screen
        lock - autoplay after unlock
    </string>
    <string name="prefs_player_restart_after_unlock_title">Restart after unlock</string>
    <string name="prefs_player_upcoming_notify_title">Notify upcoming videos</string>
    <string name="prefs_player_upcoming_notify_summary">Show a notification when and upcoming live stream is about to
        start (20 min before)
    </string>
    <string name="prefs_root_feedback_title">Feedback</string>
    <string name="prefs_root_feedback_summary_how">How are we doing?</string>
    <string-array name="prefs_root_feedback_summary">
        <item>“Criticism, like rain, should be gentle enough to nourish a man’s growth without destroying his roots.” –
            Frank A. Clark
        </item>
        <item>“Feedback is the breakfast of champions.” – Ken Blanchard</item>
        <item>“True intuitive expertise is learned from prolonged experience with good feedback on mistakes.” – Daniel
            Kahneman
        </item>
        <item>“Examine what is said and not who speaks.” – African proverb</item>
        <item>“Whatever words we utter should be chosen with care for people will hear them and be influenced by them
            for good or ill.” – Buddha
        </item>
    </string-array>
    <string name="prefs_root_share_title">Share us</string>
    <string name="prefs_root_info_cat_title">App Info</string>
    <string name="prefs_root_version_title">Version</string>
    <string name="prefs_root_version_summary">Version will appear here</string>
    <string name="prefs_root_info_cat_contact">Communications</string>
    <string name="prefs_root_test_title">Testing</string>
    <string name="prefs_root_test_summary">Test something</string>
    <string name="dialog_play_chromecast">Chromecast</string>
    <string name="dialog_play_portrait">Portrait</string>
    <string name="dialog_play_fullscreen">Fullscreen</string>
    <string name="dialog_play_floating">Floating</string>
    <string name="dialog_play_remember_my_decision">Remember my decision</string>
</resources>