<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/playlist_edit"
        android:icon="@drawable/ic_edit_24"
        android:orderInCategory="150"
        android:title="@string/menu_edit"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/playlist_star"
        android:icon="@drawable/ic_starred_off"
        android:orderInCategory="100"
        android:title="@string/menu_star"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        />

    <item
        android:id="@+id/playlist_filter"
        android:icon="@drawable/ic_menu_filter_list_white"
        android:orderInCategory="100"
        android:title="@string/menu_filter"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/playlist_new"
        android:icon="@drawable/ic_button_new_24"
        android:title="@string/menu_show_unlistened"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="never"
        android:visible="false"
    />

    <item
        android:id="@+id/playlist_play"
        android:icon="@drawable/ic_play_black"
        android:orderInCategory="250"
        android:title="@string/menu_play"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/playlist_view_cards"
        android:icon="@drawable/ic_view_card"
        android:orderInCategory="150"
        android:title="@string/menu_card"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/playlist_view_rows"
        android:icon="@drawable/ic_view_list"
        android:orderInCategory="150"
        android:title="@string/menu_list"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/playlist_mode_shuffle"
        android:icon="@drawable/ic_playmode_shuffle"
        android:orderInCategory="200"
        android:title="@string/menu_playlist_mode_shuffle"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
    />

    <item
        android:id="@+id/playlist_mode_single"
        android:icon="@drawable/ic_playmode_straight"
        android:orderInCategory="200"
        android:title="@string/menu_playlist_mode_single"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/playlist_mode_loop"
        android:icon="@drawable/ic_button_repeat_24"
        android:orderInCategory="200"
        android:title="@string/menu_playlist_mode_loop"
        android:visible="false"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/playlist_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="170"
        android:title="@string/menu_playlist_mode_loop"
        android:visible="true"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="always"
        />
</menu>