<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/playlists_context_play"
        android:icon="@drawable/ic_menu_play_black"
        android:title="@string/menu_play"
        app:iconTint="@color/popup_menu_item_enabled"
        />

    <item
        android:id="@+id/playlists_context_play_external"
        android:icon="@drawable/ic_menu_launch_black"
        android:title="@string/menu_play_yt"
        app:iconTint="@color/popup_menu_item_enabled"
        />

    <item
        android:id="@+id/playlists_context_star"
        android:icon="@drawable/ic_menu_unstarred_black"
        android:title="@string/menu_star"
        app:iconTint="@color/popup_menu_item_enabled"
        />

    <item
        android:id="@+id/playlists_context_share"
        android:icon="@drawable/ic_menu_share_black"
        android:title="@string/menu_share"
        app:iconTint="@color/popup_menu_item_enabled"
        />
</menu>