<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_playlist"
    >

    <fragment
        android:id="@+id/navigation_browse"
        android:name="uk.co.sentinelweb.cuer.app.ui.browse.BrowseFragment"
        android:label="@string/bottomnav_title_browse"
        tools:layout="@layout/browse_fragment"
        />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="uk.co.sentinelweb.cuer.app.ui.playlist.PlaylistFragment"
        android:label="@string/bottomnav_title_playlist"
        tools:layout="@layout/playlist_fragment"
        />

    <fragment
        android:id="@+id/navigation_player"
        android:name="uk.co.sentinelweb.cuer.app.ui.player.PlayerFragment"
        android:label="@string/bottomnav_title_player"
        tools:layout="@layout/player_fragment"
        />
</navigation>
