<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--    <item-->
    <!--        android:id="@+id/media_router_button"-->
    <!--        android:title="@string/media_route_menu_title"-->
    <!--        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"-->
    <!--        app:showAsAction="always"/>-->

    <item
        android:id="@+id/restart_conn"
        android:icon="@drawable/ic_menu_restart_conn_black"
        android:title="@string/menu_restart"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/paste_add"
        android:icon="@drawable/ic_menu_paste_add_black"
        android:title="@string/menu_paste"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_menu_filter_list_white"
        android:title="@string/menu_filter"
        app:iconTint="@color/menu_button_icon_tint"
        app:showAsAction="ifRoom"
        />

</menu>